# kangaroo-coinflip

./: .gitignore  README.md  package.json
contract/: .gitignore  README.md  compile.js  package-lock.json
contract/coin_flip_contract/: Cargo.toml
contract/coin_flip_contract/src/: lib.rs
contract/coin_flip_contract/tests/sim/: main.rs
contract/sandbox_testing/: package.json  test.js
contract/sandbox_testing/deploy/: 1.deploy_contracts.js  2.deposit_credits.js  3.play_game.js  4.getBalance.js  5.retrieveBalance.js  6.retrieveDevBalance.js  7.retrieveNftBalance.js  _set_up_script.js
src/: App.js  config.js  constants.js  index.html  index.js  utils.js
src/components/: About.js  CModal.js  CToast.js  CoinFlipping.js  CoinSelect.js  Faq.js  Flip.js  FlipBoard.js  Footer.js  Header.js  HowTo.js  PopupModal.js  RecentFlips.js  Spinner.js
src/components/FlipData/: FlipData.js
src/pages/: About.js  Home.js
src/styles/: coin_select.scss  footer.scss  global.scss  header.scss  modal.scss  recent_flips.scss  spinner.scss
